# EventSight

./: .gitignore  README.md
Eventsight/: .gitattributes  .gitignore  README.md  pyproject.toml
Eventsight-MCP/: .gitignore  .mcp.json  README.md  pyproject.toml
Eventsight-MCP/src/eventsight_mcp/: __init__.py  agent.py  agentic_rag.py  cli.py  events_store.py  learnings.py  models.py  parser.py  prompts.py  server.py
Eventsight/data/FilterRules/: events.csv
Eventsight/data/ReportExamples/: BlogReportExample.html
Eventsight/data/ReportExamples/DCSync-Kerberoasting/: dcsync-kerberoast.html  dcsync-kerberoast.md
Eventsight/data/ReportExamples/LateralMovement/: lateral-movement-report.html  lateral-movement-report.md
Eventsight/data/ReportExamples/Ransomware/: ransomware-report-smaller.html  ransomware-report-smaller.md  ransomware-report.html  ransomware-report.md
Eventsight/data/learnings/: learnings.db
Eventsight/src/eventsight/: __init__.py  __main__.py  agent.py  cli.py  events_store.py  evtx_parser.py  learnings.py  models.py  parser.py
